# spin-static-site

./: .gitignore  Cargo.toml  README.md  create_plugin.sh  static-site.sh
.github/workflows/: release.yaml
.plugin-manifests/: generate-manifest.sh
src/: main.rs
