[package]
name = "spin-static-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.24", features = ["derive", "env"] }
tempfile = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"